force-app/main/default/objects/DFSI_Case_Sync__mdt/DFSI_Case_Sync__mdt.object-meta.xml
<CustomObject>
    <label>DFSI Case Sync</label>
    <pluralLabel>DFSI Case Sync</pluralLabel>
</CustomObject>