force-app/main/default/objects/DFSI_Case_Sync__mdt/fields/CFS_Value__c.field-meta.xml
<CustomField>
    <fullName>CFS_Value__c</fullName>
    <label>CFS Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>