force-app/main/default/objects/DFSI_Case_Sync__mdt/fields/DFSI_Value__c.field-meta.xml
<CustomField>
    <fullName>DFSI_Value__c</fullName>
    <label>DFSI Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>