force-app/main/default/objects/DFSI_Case_Sync__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Status</fullName>
                <default>true</default>
                <label>Status</label>
            </value>
            <value>
                <fullName>Reason</fullName>
            </value>
            <value>
                <fullName>Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>