force-app/main/default/objects/DFSI_Case_Sync__mdt/listViews/All_Details.listView-meta.xml
<ListView>
    <fullName>All_Details</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>CFS_Value__c</columns>
    <columns>DFSI_Value__c</columns>
    <columns>Field_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Details</label>
</ListView>